--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+   
   <title>Frontend Mentor | Interactive card details form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -274,9 +274,9 @@
 <body>
   <div class="flex bg-image">
     <div class="main-image">
-      <img class="bg-image-1" src="/images/bg-main-desktop.png" alt="">
+      <img class="bg-image-1" src="./images/bg-main-desktop.png" alt="">
       <div class="hover-1">
-        <img class="cardFront" src="/images/bg-card-front.png" alt="">
+        <img class="cardFront" src="./images/bg-card-front.png" alt="">
         <div class="front-card-data">
           <div class="flex">
             <div class="circle-1"></div>
@@ -287,7 +287,7 @@
         </div>
       </div>
       <div>
-        <img class="cardBack" src="/images/bg-card-back.png" alt="">
+        <img class="cardBack" src="./images/bg-card-back.png" alt="">
         <div class="cardBack-data"><p>000</p></div>
       </div>
     </div>
