--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       transition: 0.4s ease;
     }
     button:hover{
-      background-image: url(/images/bg-card-front.png);
+      background-image: url(./images/bg-card-front.png);
       background-position: center;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 8px 0 rgba(0, 0, 0, 0.19);
       transform: scale(1.08);
